@@ -1,3 +1,9 @@
+2007-04-16  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-wp-capplet.c: (gnome_wp_load_stuffs): don't crash if the
+	GConf schema is missing (bug #430253). Also fix initialization of
+	the secondary colour picker
+
 2007-04-08  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Kristof Vansant <de_lupus@pandora.be>
